styles/fragments/_section-video-hopr.scss
.section.video {
  height: 100vh;
  overflow: hidden;
  position: relative;

  .background-video {
    bottom: 0;
    height: 100vh;
    left: 0;
    object-fit: cover;
    position: absolute;
    right: 0;
    top: 0;
    width: 100vw;
    z-index: -1;
  }

  h2 {
    position: relative;
    text-align: left;
    margin: 0.5em 0 1em 0;
    z-index: 1;
  }

  button {
    position: relative;
    z-index: 1;
  }

  img {
    z-index: 1;
  }

  .bottom-image {
    bottom: 0;
    position: absolute;
    right: 0;

    img {
      padding: 0 20px 20px !important;
    }
  }

  .video-buttons {
    bottom: 17%;
    position: absolute;

    button {
      margin: 0px 10px;
    }
  }

  .title-video {
    bottom: 22%;
    position: absolute;
  }

  .video-text-animated {
    display: flex;
    margin: 0;

    .cursor-animated {
      color: $cyan;
      text-shadow: $cyan 0 0 35px;
      font-size: 140px;
    }
  }

  .h2-myne {
    h2 {
      font-family: "myne regular";
      font-size: 200px;
      margin: 0;
    }

    .cursor-animated {
      font-size: 200px;
    }
  }

  .h2-regular {
    h2 {
      font-size: 140px;
      margin: 0;
    }
  }

  @media screen and (max-width: 767px) {
    .video-text-animated {
      .cursor-animated {
        font-size: 70px;
      }
    }

    .video-buttons {
      .launch-button {
        margin-bottom: 8px;
      }
    }

    .title-video {
      bottom: 30%;
    }

    .h2-myne {
      h2 {
        font-family: "myne regular";
        font-size: 100px;
        margin: 0;
      }

      .cursor-animated {
        font-size: 110px;
      }
    }

    .h2-regular {
      h2 {
        font-size: 60px;
        margin: 0;
      }
      .cursor-animated {
        font-size: 60px !important;
      }
    }

    .title-video {
      font-size: 2.1rem;
    }
  }

}

